# app/api/v1/routes/campaigns/campaign_station_sensors.py
@@ -1,11 +1,10 @@
-from datetime import datetime
 from typing import Optional
 from sqlalchemy.orm import Session
 from fastapi import APIRouter, Depends, HTTPException, Query
 
 from app.api.dependencies.auth import get_current_user
 from app.api.dependencies.pytas import check_allocation_permission
-from app.api.v1.schemas.sensor import SensorItem, GetSensorResponse, ListSensorsResponsePagination
+from app.api.v1.schemas.sensor import SensorItem, GetSensorResponse, ListSensorsResponsePagination, SensorStatistics
 from app.api.v1.schemas.user import User
 from app.db.session import get_db
 from app.db.repositories.sensor_repository import SensorRepository
@@ -33,7 +32,7 @@ async def list_sensors(
     if not check_allocation_permission(current_user, campaign_id):
         raise HTTPException(status_code=404, detail="Allocation is incorrect")
     sensor_repository = SensorRepository(db)
-    sensors, total_count = sensor_repository.get_sensors_by_station_id(
+    result, total_count = sensor_repository.get_sensors_by_station_id(
         station_id,
         page,
         limit,
@@ -44,8 +43,29 @@ async def list_sensors(
         postprocess=postprocess
     )
 
-    return ListSensorsResponsePagination(
-        items=[SensorItem(
+    response = []
+
+    for sensor, statistics in result:
+        if statistics is None:
+            statistics = SensorStatistics()
+        else:
+            statistics = SensorStatistics(
+                max_value=statistics.max_value if statistics.max_value is not None else None,
+                min_value=statistics.min_value if statistics.min_value is not None else None,
+                avg_value=statistics.avg_value if statistics.avg_value is not None else None,
+                stddev_value=statistics.stddev_value if statistics.stddev_value is not None else None,
+                percentile_90=statistics.percentile_90 if statistics.percentile_90 is not None else None,
+                percentile_95=statistics.percentile_95 if statistics.percentile_95 is not None else None,
+                percentile_99=statistics.percentile_99 if statistics.percentile_99 is not None else None,
+                count=statistics.count if statistics.count is not None else None,
+                last_measurement_time=statistics.last_measurement_collectiontime if statistics.last_measurement_collectiontime is not None else None,
+                last_measurement_value=statistics.last_measurement_value if statistics.last_measurement_value is not None else None,
+                first_measurement_value=statistics.first_measurement_value if statistics.first_measurement_value is not None else None,
+                first_measurement_collectiontime=statistics.first_measurement_collectiontime if statistics.first_measurement_collectiontime is not None else None,
+                stats_last_updated=statistics.stats_last_updated if statistics.stats_last_updated is not None else None
+            )
+
+        response.append(SensorItem(
             id=sensor.sensorid,
             alias=sensor.alias,
             variablename=sensor.variablename,
@@ -53,7 +73,11 @@ async def list_sensors(
             postprocess=sensor.postprocess,
             postprocessscript=sensor.postprocessscript,
             units=sensor.units,
-        ) for sensor in sensors],
+            statistics=statistics
+        ))
+
+    return ListSensorsResponsePagination(
+        items=response,
         total=total_count,
         page=page,
         size=limit,
